# simple_emailer

./: .flake8  .gitignore  README.md  example.py  pyproject.toml
simple_emailer/: __init__.py  connection.py  send_email.py  send_email_quick.py  simple_emailer_error.py
